[package]
name = "gto-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "gto"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "=7.1.4"
itertools = "0.13"
rand = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1"

[dev-dependencies]
approx = "0.5"
